2006-09-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCopt.c (cnvToFcall): fixed bug 1551947 by updating OP_USES
	  and OP_DEFS

2006-09-05 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libdev/pic18f4550.c,
	  device/include/pic16/pic18f4550.h: added PORTD/TRISD
	    declarations/definitions from patch #1520949

2006-09-05 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genPackBits): fix assignment to 8-bit,
	  byte-aligned bitfields, fixes #1539278

2006-09-05 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genReceive): skip unreferenced arguments,
	  fixes #1544120

2006-09-04 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: move ucSim executables to a separate section
	* support/scripts/sdcc_cygwin_mingw32: don't disable ucsim,
	  -mno-cygwin is a part of the compiler name
	* support/scripts/sdcc_mingw32: don't disable ucsim

2006-09-03 Borut Razem <borut.razem AT siol.net>

	* sdcc.spec: corrected for 2.6.0. Thanks to Christer Weinigel.
	* device/lib/Makefile.in device/lib/clean.mk: small but essential corrections

2006-09-03 Raphael Neider <rneider AT web.de>

	* src/pic/ralloc.c,
	* src/pic/pcode.c (InitReuseRegs): allocate registers with pseudo
	  indices >= 0x1000 to disambiguate them from fixed regs __at(addr),
	  fixes #1550049

2006-09-01 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdutil.cc: #include <sys/time.h> and <unistd.h>
	  to make ppc-osx happy

2006-08-31 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/newcmdposix.cc: #include <assert.h>
	* sim/ucsim/cmd.src/newcmd.cc: #include <ctype.h>
	* sim/ucsim/cmd.src/newcmd.cc: #include <ctype.h>
	* support/regression/ports/ds390/spec.mk,
	  support/regression/ports/mcs51/spec.mk,
	  support/regression/ports/xa51/spec.mk: introduced DEV_NULL variable.
	  To run regression tests in mingw environment:
	  make DEV_NULL=NUL CC=gcc

2006-08-30 Borut Razem <borut.razem AT siol.net>
